Quorum3/Library/Tests/TypeChecker/Pass/TextSetAndGetValue.quorum
class Main
    action Main
        Text t
        t:SetValue("5")
        output t:GetValue()
    end
end